microservice-produits/aks-deploy-from-acr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mproduits-deployment
  namespace: mproduits
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mproduits
  template:
    metadata:
      labels:
        app: mproduits
    spec:
      containers:
      - name: mproduits
        image: mcommerce2022.azurecr.io/mproduits:#{Build.BuildId}#
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
# service        
---
apiVersion: v1
kind: Service
metadata:
  namespace: mproduits
  labels:
    app: mproduits
    k8s-app: mproduits
  name: mproduits
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9001
  selector:
    app: mproduits
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mproduits
  namespace: mproduits
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /mproduits(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: mproduits
              port:
                number: 80
