microservice-produits/ingress-mproduits.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mproduits
  namespace: mproduits
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /mproduits(/|$)(.*)
          pathType: Prefix
          backend:
            serviceName: mproduits
            servicePort: 80
